--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
@@ -9,40 +8,39 @@
 		<script src="js/html5game.matchgame.js"></script>
 		<link rel="stylesheet" href="styles/matchgame.css" />
 	</head>
-
 	<body>
 		<div class="div_center">
 			<div class="div_parent">
-			<div class="div_column1 ">
+				<div class="div_column1 ">
 					<label>剩余次数：<span id="rest_time">15</span></label>
-			</div>
-			<div class="div_column2">
-				<section id="game">
-					<div id="card">
-						<div class="card ">
-							<div class="face back rotate"></div>
-							<!--牌底：显示牌数值的-->
-							<div class="face front"></div>
-							<!--牌面：隐藏牌数值-->
+				</div>
+				<div class="div_column2">
+					<section id="game">
+						<div id="card" class="green">
+							<div class="card ">
+								<div class="face back rotate"></div>
+								<!--牌底：显示牌数值的-->
+								<div class="face front"></div>
+								<!--牌面：隐藏牌数值-->
+							</div>
 						</div>
+					</section>
+				</div>
+				<div class="div_column3">
+					<div class="right">
+						<input class="button" type="button" value="重玩" onclick="refresh()">
+						<!--在设定模式下重玩-->
+						<input class="button" type="button" value="初级" onclick="primary()">
+						<!--2*3 10次-->
+						<input class="button" type="button" value="中级" onclick="middle()">
+						<!--3*4 20次-->
+						<input class="button" type="button" value="高级" onclick="master()">
+						<!--3*4 15次-->
 					</div>
-				</section>
-			</div>
-			<div class="div_column3">
-				<div class="div_button_group right">
-					<input class="button" type="button" value="重玩" onclick="refresh()">
-					<!--在设定模式下重玩-->
-					<input class="button" type="button" value="初级" onclick="primary()">
-					<!--2*3 10次-->
-					<input class="button" type="button" value="中级" onclick="middle()">
-					<!--3*4 20次-->
-					<input class="button" type="button" value="高级" onclick="master()">
-					<!--3*4 15次-->
 				</div>
 			</div>
 		</div>
-		</div>
-	
+
 	</body>
 
 </html>
