提示挑战成功

--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
 						<!--3*4 20次-->
 						<input class="button" type="button" value="高级" onclick="master()">
 						<!--3*4 15次-->
-						<input class="button" type="button" value="声音" onclick="mute()" />
 						<img src="imges/music.png" class="music_icon" onclick="stop_music()" />
 						<img src="imges/music_mute.png" class="music_icon" onclick="play_music()" hidden/>
-						<audio id="page_bgm" controls autoplay loop>
+						<audio id="page_bgm" autoplay loop>
 							<source src="music/bgm.mp3" type="audio/mp3"></source>
 							<source src="music/bgm.ogg" type="audio/ogg"></source>
 						</audio>
