添加蒙板效果，记牌时间不能翻牌

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="styles/matchgame.css" />
 	</head>
 	<body>
+		<div class="cover green"></div>
 		<div class="div_center">
 			<div class="div_parent">
 				<div class="div_column1 ">
